# Qorona

./: .gitignore  CITATION.cff  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: gpu.md  index.md  jhelioviewer.md  qperp-volume.md
docs/assets/fonts/: LICENSES.txt
docs/getting-started/: example-data.md  first-eclipse-image.md  hpc.md  installation.md  supported-models.md
docs/products/: fieldlines.md  polarity.md  qmaps.md  squashing-factor.md  white-light.md
docs/stylesheets/: extra.css
hpc/: qorona-cpu.slurm  qorona-gpu.slurm
overrides/: main.html
src/qorona/: __init__.py  console.py
src/qorona/accel/: __init__.py  cuda_kernels.py  kernels.py
src/qorona/cli/: __init__.py  help.py  main.py
src/qorona/config/: __init__.py  schema.py
src/qorona/field/: __init__.py  analytic.py  base.py  density.py  interpolation.py  sampled.py
src/qorona/geometry/: __init__.py  camera.py  coordinates.py
src/qorona/io/: __init__.py  fieldlines_export.py  fits.py  native.py  output.py  textio.py
src/qorona/io/formats/: __init__.py  tecplot.py
src/qorona/io/readers/: __init__.py  base.py  cfmesh.py
src/qorona/io/readers/coconut/: __init__.py  cfmesh.py  tecplot.py
src/qorona/io/readers/mas/: __init__.py  hdf.py
src/qorona/pipeline/: __init__.py  run.py
src/qorona/radiation/: __init__.py  brightness.py  display.py  thomson.py
src/qorona/render/: __init__.py  fieldlines.py  image.py  los.py  shell.py
src/qorona/resample/: __init__.py  _mls_jit.py  grid.py  resampler.py
src/qorona/squashing/: __init__.py  squashing_factor.py  transport.py  volume.py
src/qorona/trace/: __init__.py  boundaries.py  fieldline.py  integrator.py  seeding.py
tests/: test_brightness.py  test_cfmesh_reader.py  test_cli.py  test_dipole_field.py  test_dipole_squashing.py  test_dipole_tracer.py  test_fieldlines_export.py  test_fits_wcs.py  test_knn_resampler.py  test_readers.py  test_render.py  test_sampled_field.py
validation/: cuda_parity.py  dipole_q_perp.py  render_parity.py
