[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qorona"
version = "0.3.0"
description = "Synthetic coronal imagery from global MHD solutions via line-of-sight integration of the magnetic squashing factor."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Rayan Dhib" }]
dependencies = [
    # The default install is the complete Qorona: every runtime dependency needed to use every
    # feature. Three of these carry graceful runtime fallbacks and can be dropped for a leaner
    # footprint via ``pip install --no-deps`` plus the core set (an off-road choice, never the
    # default): numba (→ pure-NumPy path, no GPU), pillow (→ on-image stamp skipped), and
    # matplotlib (→ bare-raster Q-map).
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=6.0",
    "sunpy>=5.0",
    "rich>=13.0",
    "click>=8.0",
    "numba>=0.65",
    "pillow>=10.0",
    "matplotlib>=3.8",
]

[project.urls]
Repository = "https://github.com/RayanDhib/Qorona"

[project.scripts]
qorona = "qorona.cli.main:main"

[project.optional-dependencies]
# Contributor tooling only; not needed to *use* Qorona.
dev = ["ruff>=0.15,<0.16", "mypy>=2.1,<2.2", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# The numba CUDA dispatcher's low-occupancy warning fires on the deliberate one-seed kernel
# warm-ups; numba is a base dependency, so the category is always importable here.
filterwarnings = ["ignore::numba.core.errors.NumbaPerformanceWarning"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "NPY", "RUF"]

[tool.mypy]
python_version = "3.11"
packages = ["qorona"]
mypy_path = "src"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# astropy, scipy, and sunpy ship no type information (no py.typed marker or bundled stubs); ignore
# their missing imports rather than vendoring stub packages.
module = ["astropy", "astropy.*", "scipy", "scipy.*", "sunpy", "sunpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numba/llvmlite ship a py.typed marker from 0.66 on, but their public types are incomplete and
# flag correct kernel code (prange typed non-iterable, cuda.jit / NUMBA_NUM_THREADS / the Dispatcher
# call signatures). Skip analysing them so their symbols stay untyped, as they were before 0.66.
module = ["numba", "numba.*", "llvmlite", "llvmlite.*"]
follow_imports = "skip"
ignore_missing_imports = true
